Added: User Token verification with book actions